--- a/project/SPTarkov.Launcher/Components/Info/InfoCardComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Info/InfoCardComponent.razor
@@ -1,7 +1,7 @@
 ﻿@inject LocaleHelper LocaleHelper
 
 <MudItem sm="4" Class="setting-on-hover">
-    <MudLink Href="@Link">
+    <MudLink Color="Color.Default" Underline="Underline.Hover" Href="@Link">
         <MudCard Class="info-card-height cursor-pointer mud-background-gray border-2 border-solid mud-border-lines-default">
             <MudCardHeader>
                 <CardHeaderContent>
