--- a/project/SPTarkov.Launcher/Components/Settings/AdvancedPanelComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Settings/AdvancedPanelComponent.razor
@@ -26,7 +26,7 @@
     private async Task SetBackgroundUsage()
     {
         showBackgroundSwitch = !showBackgroundSwitch;
-        StateHelper.SetBackground(showBackgroundSwitch);
         ConfigHelper.SetUseBackground(showBackgroundSwitch);
+        StateHelper.SetBackground();
     }
 }
