--- a/project/SPTarkov.Launcher/Components/ForgeManager/ModCardComponent.razor
+++ b/project/SPTarkov.Launcher/Components/ForgeManager/ModCardComponent.razor
@@ -52,38 +52,26 @@
                 <CardHeaderActions>
                     @if (ForgeMod.GetModFeatured())
                     {
-                        <ToolTip Text="Featured">
-                            <MudIconButton Icon="@Icons.Material.Filled.Favorite" Color="Color.Primary"/>
-                        </ToolTip>
+                        <MudTooltip Placement="Placement.Left" Arrow="true" Text="Featured">
+                            <MudIconButton Icon="@Icons.Material.Filled.Favorite" />
+                        </MudTooltip>
                     }
-
-                    @* TODO: add one for if ai generated *@
                 </CardHeaderActions>
             </MudCardHeader>
             <MudCardContent>
                 <MudText Typo="Typo.body2">@ForgeMod.GetModTeaser()</MudText>
             </MudCardContent>
             <MudCardActions Class="pa-4">
-                <MudButton StartIcon="@Icons.Material.Filled.ReadMore" Variant="Variant.Filled" Color="Color.Primary"
-                           Size="Size.Small" DropShadow="false" @onclick="() => NavigateToSingleMod(ForgeMod.Id)">Read
-                    More
-                </MudButton>
-                <MudSpacer/>
-                <MudButton StartIcon="@Icons.Material.Filled.OpenInNew" Variant="Variant.Filled" Color="Color.Success"
-                           Size="Size.Small" DropShadow="false"
-                           Href="@($"https://forge.sp-tarkov.com/mod/{ForgeMod.Id}/{ForgeMod.Slug}")">Forge
-                </MudButton>
+                <MudButton StartIcon="@Icons.Material.Filled.ReadMore" Variant="Variant.Filled" Color="Color.Dark" Size="Size.Small" DropShadow="false" @onclick="() => NavigateToSingleMod(ForgeMod.Id)">Read More</MudButton>
             </MudCardActions>
         </MudCard>
     }
 </MudItem>
 
 @code {
-    [Parameter]
-    public bool IsSkeleton { get; set; }
+    [Parameter] public bool IsSkeleton { get; set; }
 
-    [Parameter]
-    public ForgeBase ForgeMod { get; set; }
+    [Parameter] public ForgeBase ForgeMod { get; set; }
 
     private void NavigateToSingleMod(int? modId)
     {
