--- a/project/SPTarkov.Launcher/_Imports.razor
+++ b/project/SPTarkov.Launcher/_Imports.razor
@@ -12,6 +12,7 @@
 
 @using MudBlazor
 @using MudBlazor.Components.Snackbar.InternalComponents
+@using MudBlazor.Utilities
 
 @using SPTarkov.Core
 @using SPTarkov.Core.Helpers
