--- a/project/SPTarkov.Launcher/Pages/Forge.razor
+++ b/project/SPTarkov.Launcher/Pages/Forge.razor
@@ -8,13 +8,7 @@
 @inject LocaleHelper LocaleHelper
 
 <MudContainer Class="px-4 mt-2 mb-6" MaxWidth="MaxWidth.Large">
-    @if (!_forgeAvailable)
-    {
-        <MudAlert Severity="Severity.Info" Variant="Variant.Outlined">@(LocaleHelper.Get("forge_page_coming"))</MudAlert>
-    }
-    else
-    {
-        @if (netAvailable && apiKeyAvailable)
+    @if (netAvailable && apiKeyAvailable)
     {
         <MudItem sm="12" Class="mb-6">
             <MudCard Class="mud-background-gray border-2 border-solid mud-border-lines-default px-4 pt-4 pb-2">
@@ -92,12 +86,10 @@
             }
         </MudGrid>
     }
-    }
 
 </MudContainer>
 
 @code {
-    private readonly bool _forgeAvailable = true; // TODO remove once forge is implemented
     private bool netAvailable { get; set; }
     private bool apiKeyAvailable { get; set; }
     private ForgeModsResponse searchResponse { get; set; }
@@ -105,7 +97,7 @@
 
     private int _selected = 1;
     private string _search = "";
-    private string _sortValue = "created_at";
+    private string _sortValue = "-downloads";
     private string _filterValue = "Include";
     private string _aiValue = "Exclude";
 
@@ -116,7 +108,7 @@
         {
             if (_selected != value)
             {
-                SearchForMods(value);
+                _ = SearchForMods(value);
                 _selected = value;
             }
         }
@@ -129,7 +121,7 @@
         set
         {
             _search = value;
-            SearchUpdate();
+            _ = SearchUpdate();
         }
     }
 
@@ -139,7 +131,7 @@
         set
         {
             _sortValue = value;
-            SearchUpdate();
+            _ = SearchUpdate();
         }
     }
 
@@ -149,7 +141,7 @@
         set
         {
             _filterValue = value;
-            SearchUpdate();
+            _ = SearchUpdate();
         }
     }
 
@@ -159,7 +151,7 @@
         set
         {
             _aiValue = value;
-            SearchUpdate();
+            _ = SearchUpdate();
         }
     }
 
@@ -177,7 +169,7 @@
         await SearchForMods();
     }
 
-    private async Task CheckInternetAccess()
+    private void CheckInternetAccess()
     {
         netAvailable = HttpHelper.IsInternetAccessAvailable();
     }
@@ -190,10 +182,7 @@
     private async Task SearchForMods(int? page = null)
     {
         searchInProgress = true;
-        if (page is null)
-        {
-            page = StateHelper.CurrentPagination;
-        }
+        page ??= StateHelper.CurrentPagination;
 
         try
         {
@@ -202,13 +191,12 @@
         }
         catch (Exception e)
         {
-            Logger.LogError($"Exception thrown from ForgeHelper.SearchForMods {e}");
+            Logger.LogError("Exception thrown from ForgeHelper.SearchForMods {Exception}", e);
             return;
         }
 
-        if (!searchResponse.Success)
+        if (!searchResponse!.Success)
         {
-            // ConfigHelper.SetApiKey("");
             Logger.LogError("Something failed, check logs");
             searchResponse = null;
             apiKeyAvailable = false;
@@ -229,7 +217,7 @@
         {
             apiKeyAvailable = true;
             Logger.LogInformation("Saved Apikey");
-            SearchForMods();
+            await SearchForMods();
         }
     }
 
@@ -244,8 +232,7 @@
         {
             apiKeyAvailable = true;
             Logger.LogInformation("Saved Apikey");
-            SearchForMods();
+            await SearchForMods();
         }
     }
-
 }
