--- a/project/SPTarkov.Launcher/Components/ForgeManager/DetailedModComponent.razor
+++ b/project/SPTarkov.Launcher/Components/ForgeManager/DetailedModComponent.razor
@@ -25,7 +25,7 @@
                     <MudCardHeader>
                         <MudGrid>
                             <MudItem>
-                                <MudImage Src="@($"https://forge-static.sp-tarkov.com/{ForgeMod.Thumbnail}")" Class="mod-thumbnail" Style="background-color: transparent !important;"/>
+                                <MudImage Src=@(ForgeMod.Thumbnail) Class="mod-thumbnail" Style="background-color: transparent !important;"/>
                             </MudItem>
                             <MudItem>
                                 <MudItem Class="d-flex mud-width-full">
