--- a/project/SPTarkov.Launcher/Components/ForgeManager/DetailedModComponent.razor
+++ b/project/SPTarkov.Launcher/Components/ForgeManager/DetailedModComponent.razor
@@ -42,26 +42,26 @@
                         <MudText>@ForgeMod.Teaser</MudText>
                     </MudCardContent>
                 </MudCard>
-                <MudCard Class="mud-background-gray border-2 border-solid mud-border-lines-default mb-4">
-                    <MudCardHeader>
-                        <MudGrid>
-                            <MudItem sm="8">
-                                <MudText Typo="Typo.h6" Class="no-pointers no-select">Version @(latestVersion.Version)</MudText>
-                                @if (!string.IsNullOrEmpty(latestVersion.VirusTotalLink))
-                                {
-                                    <MudLink Color="Color.Default" Underline="Underline.Always" Href="@(latestVersion.VirusTotalLink)">Virus Total Results</MudLink>
-                                }
-                            </MudItem>
-                            <MudItem sm="4" Class="d-flex flex-column align-end">
-                                <MudText Typo="Typo.body1" Class="no-pointers no-select">Created @(latestVersion.GetCreatedDateFormatted())</MudText>
-                                <MudText Typo="Typo.body1" Class="no-pointers no-select">Published @(latestVersion.GetPublishedDateFormatted())</MudText>
-                            </MudItem>
-                            <MudItem sm="12" Class="user-markdown">
-                                @((MarkupString)ForgeModVersion.Description)
-                            </MudItem>
-                        </MudGrid>
-                    </MudCardHeader>
-                </MudCard>
+                @* <MudCard Class="mud-background-gray border-2 border-solid mud-border-lines-default mb-4"> *@
+                @*     <MudCardHeader> *@
+                @*         <MudGrid> *@
+                @*             <MudItem sm="8"> *@
+                @*                 <MudText Typo="Typo.h6" Class="no-pointers no-select">Version @(latestVersion.Version)</MudText> *@
+                @*                 @if (!string.IsNullOrEmpty(latestVersion.VirusTotalLink)) *@
+                @*                 { *@
+                @*                     <MudLink Color="Color.Default" Underline="Underline.Always" Href="@(latestVersion.VirusTotalLink)">Virus Total Results</MudLink> *@
+                @*                 } *@
+                @*             </MudItem> *@
+                @*             <MudItem sm="4" Class="d-flex flex-column align-end"> *@
+                @*                 <MudText Typo="Typo.body1" Class="no-pointers no-select">Created @(latestVersion.GetCreatedDateFormatted())</MudText> *@
+                @*                 <MudText Typo="Typo.body1" Class="no-pointers no-select">Published @(latestVersion.GetPublishedDateFormatted())</MudText> *@
+                @*             </MudItem> *@
+                @*             <MudItem sm="12" Class="user-markdown"> *@
+                @*                 @((MarkupString)ForgeModVersion.Description) *@
+                @*             </MudItem> *@
+                @*         </MudGrid> *@
+                @*     </MudCardHeader> *@
+                @* </MudCard> *@
                 <MudCard Class="mud-background-gray border-2 border-solid mud-border-lines-default">
                     <MudCardContent Class="user-markdown">@((MarkupString)ForgeMod.Description)</MudCardContent>
                 </MudCard>
