change switch opacity when disabled

--- a/project/SPTarkov.Launcher/wwwroot/app.css
+++ b/project/SPTarkov.Launcher/wwwroot/app.css
@@ -336,3 +336,7 @@ div.overlay-container {
     max-width: 100% !important;
     max-height: 100% !important;
 }
+
+.disabled-switch {
+    opacity: 50%;
+}
