change locale reload method

--- a/project/SPTarkov.Launcher/Components/Profiles/ProfileCardComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Profiles/ProfileCardComponent.razor
@@ -128,8 +128,8 @@
             StateHelper.SetSelectedProfile(MiniProfile);
             loggedIn = StateHelper.SelectedProfile != null;
 
-            Logger.LogInformation("Navigating to /ServerPageWrapper");
-            NavigationManager.NavigateTo("/ServerPageWrapper");
+            Logger.LogInformation("Navigating to /ServerPageWrapper/false");
+            NavigationManager.NavigateTo("/ServerPageWrapper/false");
         }
     }
 
