--- a/project/SPTarkov.Launcher/Pages/Profile.razor
+++ b/project/SPTarkov.Launcher/Pages/Profile.razor
@@ -101,7 +101,7 @@
     private async Task ReturnToProfiles()
     {
         StateHelper.SetSelectedProfile(null);
-        NavigationManager.NavigateTo("/ServerPageWrapper");
+        NavigationManager.NavigateTo("/ServerPageWrapper/false");
     }
 
 }
